# avalon_onchain

./: .gitignore  AGENT_ISSUES.md  ARCHITECTURE.md  Anchor.toml  BACKEND_API.md  BUILD_FIX.md  BUILD_STATUS.md  BUILD_WORKAROUND.md  Cargo.lock.bak  Cargo.toml  DEBUG_FRONTEND_GAMES.md  DEPLOYMENT_FOR_REMOTE_AGENTS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_DIRECT.sh  DEPLOY_NOW.sh  DEPLOY_PROGRAM.md  DISCRIMINATOR_FIX_SUMMARY.md  FINAL_BUILD_SOLUTION.md  FIX_DEPLOYMENT_ERROR.md  FIX_EDITION2024.md  FIX_RUST_VERSION.md  FIX_SOLANA_SDK.md  FRONTEND_FIX.md  FUND_BUFFER_AND_DEPLOY.sh  INSTALLATION_STATUS.md  INSTALL_ANCHOR.md  NEXT_STEPS.md  OPENCLAW_PROMPT.md  PROGRAM_DEPLOYMENT_STATUS.md  RAILWAY_DEPLOY.md  README.md  SDK_FIX.md  SDK_TROUBLESHOOTING.md  SDK_V0.1.2_UPDATE.md  SDK_V0.1.3_DISCRIMINATOR_FIX.md  SESSION_CHANGES_SUMMARY.md  SIMPLE_DEPLOY.md  SOLANA_WALLET_COMMANDS.md  STATUS.md  SUBMISSION.md  (+10 more)
.cursor/skills/play-avalon/: SKILL.md
.github/workflows/: deploy.yml
backend/: package-lock.json  package.json
backend/idl/: README.md  avalon_game.json
backend/src/: demo.ts  gameSimulation.ts  indexer.ts  merkleTree.ts  roleAssignment.ts  server.ts
frontend/: architecture.html  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: GameList.tsx  GameScene.tsx  LandingPage.tsx  SpectatorView.tsx
programs/avalon_game/: Cargo.toml
programs/avalon_game/src/: lib.rs
programs/avalon_game/wallet/: trader-keypair.json
sdk/: AGENT_API.md  package-lock.json  package.json
sdk/src/: index.ts
tests/: avalon_game.ts
tests/e2e/: package.json
tests/e2e/src/: run-e2e.ts
wallet/: trader-keypair.json
(+5 files in other folders)
