[package]
name = "avalon_game"
version = "0.1.0"
description = "Avalon Game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "avalon_game"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
