[package]
name = "avalon_game"
version = "0.1.0"
description = "Avalon Game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "avalon_game"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
# Note: switchboard-solana removed - causes edition2024 compatibility issues
bytemuck = "1.14"
